[BACKLOG-40283] Cleanup and simplify scripts; don't need to check for JDK 8 anymore.